--- a/GitApi/GitApi.Web/Web.config
+++ b/GitApi/GitApi.Web/Web.config
@@ -14,6 +14,11 @@
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
+  <system.net>
+    <defaultProxy useDefaultCredentials="true">
+      <proxy proxyaddress="http://inet-rj.petrobras.com.br:8080" />
+    </defaultProxy>
+  </system.net>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
