--- a/GitApi/GitApi.Web/GitApi.Web.csproj
+++ b/GitApi/GitApi.Web/GitApi.Web.csproj
@@ -131,6 +131,9 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\RepositoriosController.cs" />
+    <Compile Include="Exceptions\ObterColaboradoresException.cs" />
+    <Compile Include="Exceptions\ObterPorNomeException.cs" />
+    <Compile Include="Exceptions\ObterRepositoriosUsuarioException.cs" />
     <Compile Include="GitRepositorios\GitClient.cs" />
     <Compile Include="GitRepositorios\GitRepositoriosConfig.cs" />
     <Compile Include="GitRepositorios\Response\ColaboradoresResponse.cs" />
