implementação do repositório como favoritos.

--- a/GitApi/GitApi.Data/GitApi.Data.csproj
+++ b/GitApi/GitApi.Data/GitApi.Data.csproj
@@ -50,12 +50,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GitApiContext.cs" />
-    <Compile Include="GitApiDBInitializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GitApi.Domain\GitApi.Domain.csproj">
+      <Project>{545eb1f3-bab8-4a1c-ba7c-90ea62434135}</Project>
+      <Name>GitApi.Domain</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
