--- a/GitApi/GitApi.Web/GitApi.Web.csproj
+++ b/GitApi/GitApi.Web/GitApi.Web.csproj
@@ -161,6 +161,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\FavoritosModels\FavoritosListarViewModel.cs" />
     <Compile Include="ViewModels\Repositorios\DetalhesViewModel.cs" />
     <Compile Include="ViewModels\Repositorios\IndexViewModel.cs" />
   </ItemGroup>
@@ -173,6 +174,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Views\Favoritos\Index.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
@@ -227,7 +229,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
-    <Folder Include="Views\Favoritos\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
